--- a/portfolio webstie/index.html
+++ b/portfolio webstie/index.html
@@ -13,7 +13,7 @@
         </div>
     <div class="navbar">
         <div class="logo">
-            <img src="/img/logo.jpg" alt="logo">
+            <img src="./img/logo.jpg" alt="logo">
         </div>
         <div class="nav-list">
             <li ><a class="li-items" href="#home">HOME</a></li>
